<resources>
    <string name="app_name">DemoEvaluationChiChin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ChinChin</string>
    <string name="nav_header_subtitle">App demo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Calculate </string>
    <string name="menu_gallery">Scan QR</string>
    <string name="menu_slideshow">Close session</string>
    <string name="menu_result">Result</string>
    <string name="content_description_image_view_splash">Icon Provider</string>

    <string name="hint_user_login">example: JB23 </string>
    <string name="hint_pass_login">*******</string>
    <string name="button_text_login">Login</string>
    <string name="user_title">User:</string>
    <string name="user_pass">Password:</string>
    <string name="calculate_description">On this screen you can see the current market price of currencies in dollars as well as make an estimate using these values as a reference.
</string>
    <string name="btc">BTC</string>
    <string name="eth">ETH</string>
    <string name="ptr">PTR</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="bs">BS</string>

    <string name="calculate_button">Calculate</string>
    <string name="calculate_hint">Example: 200$</string>
    <string name="tell_me_text">tell me the amount to invert ($)</string>
    <string name="share_result_title">To share these results you can use this QR code</string>

</resources>