<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calculate">

    <fragment
        android:id="@+id/nav_calculate"
        android:name="com.android.demoevaluationchichin.ui.calculate.CalculateFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_calculate" >

    </fragment>

    <fragment
        android:id="@+id/nav_scan"
        android:name="com.android.demoevaluationchichin.ui.scan.ScanFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/nav_close"
        android:name="com.android.demoevaluationchichin.ui.close.CloseFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_result"
        android:name="com.android.demoevaluationchichin.ui.result.ResultFragment"
        android:label="@string/menu_result"
        tools:layout="@layout/fragment_result" />
</navigation>